# TrendSense

./: .gitignore  README.md  RSS.py  article.txt  articles.csv  clustering_test.py  clusters.csv  devlog.md  main.py  one_hr_art.csv  pyproject.toml  requirements.txt  retrieval.py  rough.py  sources.csv  sources.py  test.csv  title.txt
DataBuffer/: articles.csv  articles_old.csv  clusters.csv  temp_art_s3_log.csv  test2_articles.csv
clustering/: articles.py  config.py  embedding.py  textGenerator.py
data_manager/: articlesdb_upload.py  buffer_cleaner.py  buffer_loader.py  config.py  s3_upload.py  test.py
scraper/: retrieval.py  sources.csv
src/trendsense/: main.py  prettyPrint.py  trend.py
src/trendsense.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/trendsense/cli/: scrape.py  trense.py  upload.py
src/trendsense/clustering/: articles.py  embedding.py
src/trendsense/data_manager/: articlesdb_upload.py  config.py  db_upload.py  s3_upload.py
src/trendsense/scraper/: RSS.py  retrieval.py  sources.csv  sources.py
src/trendsense/state_manager/: state_manager.py  states.json
